--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
   <description>REST API bank application</description>
 
   <properties>
+    <java.version>8</java.version>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
